Added missing localities for Resources.

--- a/special-tags/V2LayoutHeaderAjaxNav-CN.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-CN.html
@@ -1325,19 +1325,19 @@ navigation for Chinese
     </a>
     <ul class="tier2">
       <li class="subLinks" id="resources-mobile">
-        <a href="/events/#bybrandsonicwall">
+        <a href="/cn-zh/events/#bybrandsonicwall">
           <span>活动和演示
           </span>
         </a>
-        <a href="/documents/#bybrandsonicwall">
+        <a href="/cn-zh/documents/#bybrandsonicwall">
           <span>研究文档
           </span>
         </a>
-        <a href="/documents/#casestudy_bybrandsonicwall">
+        <a href="/cn-zh/documents/#casestudy_bybrandsonicwall">
           <span>成功案例
           </span>
         </a>
-        <a href="/video-gallery/#bysolutionnetworksecurity">
+        <a href="/cn-zh/video-gallery/#bysolutionnetworksecurity">
           <span>视频
           </span>
         </a>
@@ -1354,13 +1354,13 @@ navigation for Chinese
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/events/#bybrandsonicwall">
+                        <a href="/cn-zh/events/#bybrandsonicwall">
                           <span>活动和演示
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/documents/#bybrandsonicwall">
+                        <a href="/cn-zh/documents/#bybrandsonicwall">
                           <span>研究文档
                           </span>
                         </a>
@@ -1370,13 +1370,13 @@ navigation for Chinese
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/documents/#casestudy_bybrandsonicwall">
+                        <a href="/cn-zh/documents/#casestudy_bybrandsonicwall">
                           <span>成功案例
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/video-gallery/#bysolutionnetworksecurity">
+                        <a href="/cn-zh/video-gallery/#bysolutionnetworksecurity">
                           <span>视频
                           </span>
                         </a>
@@ -1385,7 +1385,7 @@ navigation for Chinese
                   </div>
                   <div class="last-row col-md-12 pl-0 pr-0 border-t-grey pt-15 mt-5">
                     <div class="col-md-6">
-                      <a href="/documents/">
+                      <a href="/cn-zh/documents/">
                         <span>查看所有资源
                         </span>
                         <i class="icon-ui-triangleright">
