--- a/special-tags/V2LayoutHeaderAjaxNav-FR.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-FR.html
@@ -401,15 +401,15 @@ navigation for French
                         </small>
                         <ul class="col-md-4">
                           <li>
-                            <a href=" /fr-fr/products/sonicwall-supermassive-e10000/">E10800
+                            <a href="/fr-fr/products/sonicwall-supermassive-e10000/">E10800
                             </a>
                           </li>
                           <li>
-                            <a href=" /fr-fr/products/sonicwall-supermassive-e10000/">E10400
+                            <a href="/fr-fr/products/sonicwall-supermassive-e10000/">E10400
                             </a>
                           </li>
                           <li>
-                            <a href=" /fr-fr/products/sonicwall-supermassive-e10000/">E10200
+                            <a href="/fr-fr/products/sonicwall-supermassive-e10000/">E10200
                             </a>
                           </li>
                         </ul>
@@ -895,19 +895,19 @@ navigation for French
                   </aside>
                   <aside class="col-md-12">
                     <div class="col-md-2 pl-0 pr-0">
-                      <a href=" /fr-fr/email-security-platform/">
+                      <a href="/fr-fr/email-security-platform/">
                         <img class="img-responsive" src="/image/Sonicwall-header-footer/SonicOS_Del-SonicWALL_24x24.png">
                       </a>
                     </div>
                     <div class="col-md-10 pl-0 pr-0">
-                      <a href=" /fr-fr/email-security-platform/">Fonction de plate-forme
+                      <a href="/fr-fr/email-security-platform/">Fonction de plate-forme
                       </a>
                     </div>
                     <div class="col-md-12 pl-0 pr-0 pt-10">
                       <small class="block">La sécurité globale et intégrée.
                       </small>
                       <small>
-                        <a href=" /fr-fr/email-security-platform/">CompLearn plus &gt;
+                        <a href="/fr-fr/email-security-platform/">CompLearn plus &gt;
                         </a>
                       </small>
                     </div>
@@ -923,7 +923,7 @@ navigation for French
                     </a>
                   </div>
                   <div class="col-lg-6 col-md-4">
-                    <a href="/email-security-selector/">
+                    <a href="/fr-fr/email-security-selector/">
                       <span>Comparer les modèles
                       </span>
                       <i class="icon-ui-triangleright">
@@ -1313,19 +1313,19 @@ navigation for French
   </a>
   <ul class="tier2">
     <li class="subLinks" id="resources-mobile">
-      <a href="/events/#bybrandsonicwall">
+      <a href="/fr-fr/events/#bybrandsonicwall">
         <span>Événements et démonstrations
         </span>
       </a>
-      <a href="/documents/#bybrandsonicwall">
+      <a href="/fr-fr/documents/#bybrandsonicwall">
         <span>Documents de recherche
         </span>
       </a>
-      <a href="/documents/#casestudy_bybrandsonicwall">
+      <a href="/fr-fr/documents/#casestudy_bybrandsonicwall">
         <span>Témoignages de clients
         </span>
       </a>
-      <a href="/video-gallery/#bysolutionnetworksecurity">
+      <a href="/fr-fr/video-gallery/#bysolutionnetworksecurity">
         <span>Vidéos
         </span>
       </a>
@@ -1342,13 +1342,13 @@ navigation for French
                 <div class="col-md-3">
                   <ul class="text-md">
                     <li>
-                      <a href="/events/#bybrandsonicwall">
+                      <a href="/fr-fr/events/#bybrandsonicwall">
                         <span>Événements et démonstrations
                         </span>
                       </a>
                     </li>
                     <li>
-                      <a href="/documents/#bybrandsonicwall">
+                      <a href="/fr-fr/documents/#bybrandsonicwall">
                         <span>Documents de recherche
                         </span>
                       </a>
@@ -1358,13 +1358,13 @@ navigation for French
                 <div class="col-md-3">
                   <ul class="text-md">
                     <li>
-                      <a href="/documents/#casestudy_bybrandsonicwall">
+                      <a href="/fr-fr/documents/#casestudy_bybrandsonicwall">
                         <span>Témoignages de clients
                         </span>
                       </a>
                     </li>
                     <li>
-                      <a href="/video-gallery/#bysolutionnetworksecurity">
+                      <a href="/fr-fr/video-gallery/#bysolutionnetworksecurity">
                         <span>Vidéos
                         </span>
                       </a>
@@ -1373,7 +1373,7 @@ navigation for French
                 </div>
                 <div class="last-row col-md-12 pl-0 pr-0 border-t-grey pt-15 mt-5">
                   <div class="col-md-6">
-                    <a href="/documents/">
+                    <a href="/fr-fr/documents/">
                       <span>Afficher toutes les ressources
                       </span>
                       <i class="icon-ui-triangleright">
