--- a/special-tags/V2LayoutHeaderAjaxNav-JP.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-JP.html
@@ -1211,19 +1211,19 @@ navigation for Japanese
     </a>
     <ul class="tier2">
       <li class="subLinks" id="resources-mobile">
-        <a href="/events/#bybrandsonicwall">
+        <a href="/jp-ja/events/#bybrandsonicwall">
           <span>イベント
           </span>
         </a>
-        <a href="/documents/#bybrandsonicwall">
+        <a href="/jp-ja/documents/#bybrandsonicwall">
           <span>ドキュメント
           </span>
         </a>
-        <a href="/documents/#casestudy_bybrandsonicwall">
+        <a href="/jp-ja/documents/#casestudy_bybrandsonicwall">
           <span>お客様事例
           </span>
         </a>
-        <a href="/video-gallery/#bysolutionnetworksecurity">
+        <a href="/jp-ja/video-gallery/#bysolutionnetworksecurity">
           <span>ビデオ
           </span>
         </a>
@@ -1240,13 +1240,13 @@ navigation for Japanese
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/events/#bybrandsonicwall">
+                        <a href="/jp-ja/events/#bybrandsonicwall">
                           <span>イベント
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/documents/#bybrandsonicwall">
+                        <a href="/jp-ja/documents/#bybrandsonicwall">
                           <span>ドキュメント
                           </span>
                         </a>
@@ -1256,13 +1256,13 @@ navigation for Japanese
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/documents/#casestudy_bybrandsonicwall">
+                        <a href="/jp-ja/documents/#casestudy_bybrandsonicwall">
                           <span>お客様事例
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/video-gallery/#bysolutionnetworksecurity">
+                        <a href="/jp-ja/video-gallery/#bysolutionnetworksecurity">
                           <span>ビデオ
                           </span>
                         </a>
@@ -1271,7 +1271,7 @@ navigation for Japanese
                   </div>
                   <div class="last-row col-md-12 pl-0 pr-0 border-t-grey pt-15 mt-5">
                     <div class="col-md-6">
-                      <a href="/documents/">
+                      <a href="/jp-ja/documents/">
                         <span>すべてリソース
                         </span>
                         <i class="icon-ui-triangleright">
