--- a/special-tags/V2LayoutHeaderAjaxNav-MX.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-MX.html
@@ -339,11 +339,11 @@ navigation for MX Spanish
             </a>
           </li>
           <li>
-            <a href=" /mx-es/email-security-services-add-ons/">Servicios de Seguridad
+            <a href="/mx-es/email-security-services-add-ons/">Servicios de Seguridad
             </a>
           </li>
           <li>
-            <a href=" /mx-es/email-security-platform/">Característica Plataforma
+            <a href="/mx-es/email-security-platform/">Característica Plataforma
             </a>
           </li>
         </ul>
@@ -894,33 +894,33 @@ navigation for MX Spanish
                         </a>
                       </div>
                       <div class="col-md-10 pl-0 pr-0">
-                        <a href=" /mx-es/email-security-services-add-ons/">Servicios de Seguridad
+                        <a href="/mx-es/email-security-services-add-ons/">Servicios de Seguridad
                         </a>
                       </div>
                       <div class="col-md-12 pl-0 pr-0 pt-10">
                         <small class="block">Las opciones para una mayor protección y retorno de la inversión.
                         </small>
                         <small>
-                          <a href=" /mx-es/email-security-services-add-ons/">Ver todos los servicios &gt;
+                          <a href="/mx-es/email-security-services-add-ons/">Ver todos los servicios &gt;
                           </a>
                         </small>
                       </div>
                     </aside>
                     <aside class="col-md-12">
                       <div class="col-md-2 pl-0 pr-0">
-                        <a href=" /mx-es/email-security-platform/">
+                        <a href="/mx-es/email-security-platform/">
                           <img class="img-responsive" src="/image/Sonicwall-header-footer/SonicOS_Del-SonicWALL_24x24.png">
                         </a>
                       </div>
                       <div class="col-md-10 pl-0 pr-0">
-                        <a href=" /mx-es/email-security-platform/">Característica Plataforma
+                        <a href="/mx-es/email-security-platform/">Característica Plataforma
                         </a>
                       </div>
                       <div class="col-md-12 pl-0 pr-0 pt-10">
                         <small class="block">Seguridad integrada completa.
                         </small>
                         <small>
-                          <a href=" /mx-es/email-security-platform/">Aprender más &gt;
+                          <a href="/mx-es/email-security-platform/">Aprender más &gt;
                           </a>
                         </small>
                       </div>
@@ -1326,19 +1326,19 @@ navigation for MX Spanish
     </a>
     <ul class="tier2">
       <li class="subLinks" id="resources-mobile">
-        <a href="/events/#bybrandsonicwall">
+        <a href="/mx-es/events/#bybrandsonicwall">
           <span>Eventos y demostraciones
           </span>
         </a>
-        <a href="/documents/#bybrandsonicwall">
+        <a href="/mx-es/documents/#bybrandsonicwall">
           <span>Documentos de investigación
           </span>
         </a>
-        <a href="/documents/#casestudy_bybrandsonicwall">
+        <a href="/mx-es/documents/#casestudy_bybrandsonicwall">
           <span>Las historias de éxito
           </span>
         </a>
-        <a href="/video-gallery/#bysolutionnetworksecurity">
+        <a href="/mx-es/video-gallery/#bysolutionnetworksecurity">
           <span>Vídeos
           </span>
         </a>
@@ -1355,13 +1355,13 @@ navigation for MX Spanish
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/events/#bybrandsonicwall">
+                        <a href="/mx-es/events/#bybrandsonicwall">
                           <span>Eventos y demostraciones
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/documents/#bybrandsonicwall">
+                        <a href="/mx-es/documents/#bybrandsonicwall">
                           <span>Documentos de investigación
                           </span>
                         </a>
@@ -1371,13 +1371,13 @@ navigation for MX Spanish
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/documents/#casestudy_bybrandsonicwall">
+                        <a href="/mx-es/documents/#casestudy_bybrandsonicwall">
                           <span>Las historias de éxito
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/video-gallery/#bysolutionnetworksecurity">
+                        <a href="/mx-es/video-gallery/#bysolutionnetworksecurity">
                           <span>Vídeos
                           </span>
                         </a>
@@ -1386,7 +1386,7 @@ navigation for MX Spanish
                   </div>
                   <div class="last-row col-md-12 pl-0 pr-0 border-t-grey pt-15 mt-5">
                     <div class="col-md-6">
-                      <a href="/documents/">
+                      <a href="/mx-es/documents/">
                         <span>Ver todos los recursos
                         </span>
                         <i class="icon-ui-triangleright">
