--- a/special-tags/V2LayoutHeaderAjaxNav-DE.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-DE.html
@@ -28,15 +28,15 @@ navigation for German
             </a>
             <ul class="tier4">
               <li>
-                <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10800
+                <a href="/de-de/products/sonicwall-supermassive-e10000/">E10800
                 </a>
               </li>
               <li>
-                <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10400
+                <a href="/de-de/products/sonicwall-supermassive-e10000/">E10400
                 </a>
               </li>
               <li>
-                <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10200
+                <a href="/de-de/products/sonicwall-supermassive-e10000/">E10200
                 </a>
               </li>
               <li>
@@ -182,11 +182,11 @@ navigation for German
             </a>
           </li>
           <li>
-            <a href=" /de-de/network-security-services-add-ons/">Sicherheitsdienste
+            <a href="/de-de/network-security-services-add-ons/">Sicherheitsdienste
             </a>
           </li>
           <li>
-            <a href=" /de-de/network-security-os-platform/">Platform Funktionen
+            <a href="/de-de/network-security-os-platform/">Platform Funktionen
             </a>
           </li>
         </ul>
@@ -246,7 +246,7 @@ navigation for German
                 </a>
               </li>
               <li>
-                <a href="c">1600
+                <a href="/de-de/products/sra-1600/">1600
                 </a>
               </li>
               <li>
@@ -332,7 +332,7 @@ navigation for German
             </a>
           </li>
           <li>
-            <a href=" /de-de/email-security-platform/">Platform Funktionen
+            <a href="/de-de/email-security-platform/">Platform Funktionen
             </a>
           </li>
         </ul>
@@ -401,15 +401,15 @@ navigation for German
                         </small>
                         <ul class="col-md-4">
                           <li>
-                            <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10800
+                            <a href="/de-de/products/sonicwall-supermassive-e10000/">E10800
                             </a>
                           </li>
                           <li>
-                            <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10400
+                            <a href="/de-de/products/sonicwall-supermassive-e10000/">E10400
                             </a>
                           </li>
                           <li>
-                            <a href=" /de-de/products/sonicwall-supermassive-e10000/">E10200
+                            <a href="/de-de/products/sonicwall-supermassive-e10000/">E10200
                             </a>
                           </li>
                         </ul>
@@ -587,38 +587,38 @@ navigation for German
                   <div class="col-md-3 pr-0-md">
                     <aside class="col-md-12">
                       <div class="col-md-2 pl-0 pr-0">
-                        <a class="p-0" href=" /de-de/network-security-services-add-ons/">
+                        <a class="p-0" href="/de-de/network-security-services-add-ons/">
                           <img class="img-responsive" src="/image/Sonicwall-header-footer/icon_mainnav_lock.png">
                         </a>
                       </div>
                       <div class="col-md-10 pl-0 pr-0">
-                        <a href=" /de-de/network-security-services-add-ons/">Sicherheitsdienste
+                        <a href="/de-de/network-security-services-add-ons/">Sicherheitsdienste
                         </a>
                       </div>
                       <div class="col-md-12 pl-0 pr-0 pt-10">
                         <small class="block">Optionen für mehr Schutz und ROI.
                         </small>
                         <small>
-                          <a href=" /de-de/network-security-services-add-ons/">Alle Dienstleistungen anzeigen &gt;
+                          <a href="/de-de/network-security-services-add-ons/">Alle Dienstleistungen anzeigen &gt;
                           </a>
                         </small>
                       </div>
                     </aside>
                     <aside class="col-md-12">
                       <div class="col-md-2 pl-0 pr-0">
-                        <a href=" /de-de/network-security-os-platform/">
+                        <a href="/de-de/network-security-os-platform/">
                           <img class="img-responsive" src="/image/Sonicwall-header-footer/SonicOS_Del-SonicWALL_24x24.png">
                         </a>
                       </div>
                       <div class="col-md-10 pl-0 pr-0">
-                        <a href=" /de-de/network-security-os-platform/">Platform Funktionen
+                        <a href="/de-de/network-security-os-platform/">Platform Funktionen
                         </a>
                       </div>
                       <div class="col-md-12 pl-0 pr-0 pt-10">
                         <small class="block">Umfassende integrierte Sicherheit.
                         </small>
                         <small>
-                          <a href=" /de-de/network-security-os-platform/">Mehr erfahren &gt;
+                          <a href="/de-de/network-security-os-platform/">Mehr erfahren &gt;
                           </a>
                         </small>
                       </div>
@@ -906,19 +906,19 @@ navigation for German
                     </aside>
                     <aside class="col-md-12">
                       <div class="col-md-2 pl-0 pr-0">
-                        <a href=" /de-de/email-security-platform/">
+                        <a href="/de-de/email-security-platform/">
                           <img class="img-responsive" src="/image/Sonicwall-header-footer/SonicOS_Del-SonicWALL_24x24.png">
                         </a>
                       </div>
                       <div class="col-md-10 pl-0 pr-0">
-                        <a href=" /de-de/email-security-platform/">Platform Funktionen
+                        <a href="/de-de/email-security-platform/">Platform Funktionen
                         </a>
                       </div>
                       <div class="col-md-12 pl-0 pr-0 pt-10">
                         <small class="block">Umfassende integrierte Sicherheit.
                         </small>
                         <small>
-                          <a href=" /de-de/email-security-platform/">Mehr erfahren &gt;
+                          <a href="/de-de/email-security-platform/">Mehr erfahren &gt;
                           </a>
                         </small>
                       </div>
@@ -1321,19 +1321,19 @@ navigation for German
     </a>
     <ul class="tier2">
       <li class="subLinks" id="resources-mobile">
-        <a href="/events/#bybrandsonicwall">
+        <a href="/de-de/events/#bybrandsonicwall">
           <span>Veranstaltungen und Demos
           </span>
         </a>
-        <a href="/documents/#bybrandsonicwall">
+        <a href="/de-de/documents/#bybrandsonicwall">
           <span>Unterlagen
           </span>
         </a>
-        <a href="/documents/#casestudy_bybrandsonicwall">
+        <a href="/de-de/documents/#casestudy_bybrandsonicwall">
           <span>die Erfolgsgeschichten
           </span>
         </a>
-        <a href="/video-gallery/#bysolutionnetworksecurity">
+        <a href="/de-de/video-gallery/#bysolutionnetworksecurity">
           <span>Vídeos
           </span>
         </a>
@@ -1350,13 +1350,13 @@ navigation for German
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/events/#bybrandsonicwall">
+                        <a href="/de-de/events/#bybrandsonicwall">
                           <span>Veranstaltungen und Demos
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/documents/#bybrandsonicwall">
+                        <a href="/de-de/documents/#bybrandsonicwall">
                           <span>Unterlagen
                           </span>
                         </a>
@@ -1366,13 +1366,13 @@ navigation for German
                   <div class="col-md-3">
                     <ul class="text-md">
                       <li>
-                        <a href="/documents/#casestudy_bybrandsonicwall">
+                        <a href="/de-de/documents/#casestudy_bybrandsonicwall">
                           <span>die Erfolgsgeschichten
                           </span>
                         </a>
                       </li>
                       <li>
-                        <a href="/video-gallery/#bysolutionnetworksecurity">
+                        <a href="/de-de/video-gallery/#bysolutionnetworksecurity">
                           <span>Vídeos
                           </span>
                         </a>
@@ -1381,7 +1381,7 @@ navigation for German
                   </div>
                   <div class="last-row col-md-12 pl-0 pr-0 border-t-grey pt-15 mt-5">
                     <div class="col-md-6">
-                      <a href="/documents/">
+                      <a href="/de-de/documents/">
                         <span>Alle Ressourcen anzeigen
                         </span>
                         <i class="icon-ui-triangleright">
