BUG: Remove extra period under Supermassive

--- a/special-tags/V2LayoutHeaderAjaxNav-CN.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-CN.html
@@ -407,7 +407,7 @@ navigation for Chinese
                       <div class="col-md-9 mb-30 pr-0">
                         <a href="/cn-zh/products/network-security-products/">SuperMassive系列
                         </a>
-                        <small class="block">性能超高的下一代防火墙，适用于10千兆以上的网络。.
+                        <small class="block">性能超高的下一代防火墙，适用于10千兆以上的网络。
                         </small>
                         <ul class="col-md-4">
                           <li>
