added missing a period punctuation after "WAN"

--- a/special-tags/V2LayoutHeaderAjaxNav-BR.html
+++ b/special-tags/V2LayoutHeaderAjaxNav-BR.html
@@ -449,7 +449,7 @@ navigation for Brazil
                     <div class="col-md-9 mb-30 pr-0">
                       <a href="/br-pt/products/sonicwall-wxa/">WXA Series
                       </a>
-                      <small class="block">Desempenho acelerado de aplicativos da WAN
+                      <small class="block">Desempenho acelerado de aplicativos da WAN.
                       </small>
                       <ul class="col-md-12">
                         <li>
