Fixed editorials in sm view, hide blockqoute in sm
As requested by John G.

--- a/pages/homepage/homepage-day1.html
+++ b/pages/homepage/homepage-day1.html
@@ -94,12 +94,12 @@
 <section id="editorials">
   <div class="container">
     <div class="row mt-40 mb-40 mt-0-xs mb-0-xs">
-      <div class="col-sm-12 col-md-6 col-xs-12 mt-20 mb-20">
+      <div class="col-xs-12 col-sm-6 mt-20 mb-20">
         <a href="/docs/executive-summary-dell-security-2016-threat-report-white-paper-20843.pdf" target="_blank">
           <img class="img-responsive img-border-grey" src="/images/banner/seahawk/Cyber-Attack-A02-000068635595_XXXLarge.jpg" />
         </a>
       </div>
-      <div id="zz-1-text" class="col-sm-12 col-md-5 col-xs-12 mt-20 mb-20 mt-0-xs">
+      <div id="zz-1-text" class="col-xs-12 col-sm-6 col-md-5 mt-20 mb-20 mt-0-xs">
         <h3 class="mt-0 mb-15 feature">Top threats you need to know
         </h3>
         <p>The 2016 SonicWall Annual Threat Report includes key findings from our threat research center, expert analysis and steps you can take now to protect your network. In 2015, we blocked 2.17 trillion IPS attacks and 8.19 billion malware attacks.
@@ -116,12 +116,12 @@
   <div class="grey-bg-sw">
     <div class="container">
       <div class="row mt-40 mb-40 mt-0-xs mb-0-xs">
-        <div class="col-sm-12 col-md-6 col-xs-12 mt-20 mb-20 pull-right">
+        <div class="col-xs-12 col-sm-6 mt-20 mb-20 pull-right">
           <a href="/docs/solution-brief-best-practices-for-stopping-encrypted-threats-technical-brief-22431.pdf" target="_blank">
             <img class="img-responsive img-border-grey" src="/images/banner/seahawk/Shes-a-genius-programmer-000093275105_XXXLarge.jpg" />
           </a>
         </div>
-        <div id="zz-2-text" class="col-sm-12 col-md-5 col-xs-12 mt-20 mb-20 mt-0-xs">
+        <div id="zz-2-text" class="col-xs-12 col-sm-6 col-md-5 mt-20 mb-20 mt-0-xs">
           <h3 class="mt-0 mb-15 feature">Best practices for stopping encrypted threats
           </h3>
           <p>Learn how to keep the integrity and privacy of SSL communication intact while ensuring security of the network and the data that&#39;s being exchanged.
@@ -138,17 +138,17 @@
   </div>
   <div class="container">
     <div class="row mt-40 mb-40 mt-0-xs mb-0-xs">
-      <div class="col-sm-12 col-md-6 col-xs-12 mt-20 mb-20">
+      <div class="col-xs-12 col-sm-6 mt-20 mb-20">
         <a href="/documents/mchenry-county-college-deploys-sonicwall-firewall-solutions-to-enhance-security-along-with-other-dell-solutions-case-study-113425.pdf" target="_blank">
           <img class="img-responsive img-border-grey" src="/images/banner/seahawk/mchenry-county-college.jpg" />
         </a>
       </div>
-      <div id="zz-3-text" class="col-sm-12 col-md-5 col-xs-12 mt-20 mb-20 mt-0-xs">
+      <div id="zz-3-text" class="col-xs-12 col-sm-6 col-md-5 mt-20 mb-20 mt-0-xs">
         <h3 class="mt-0 mb-15 feature">College gains fast, reliable IT without boosting expenses
         </h3>
         <p>McHenry County College now supports its students and faculty with faster access, greater security, and improved backup and disaster recovery capabilities.
         </p>
-        <blockquote class="new-blockquote">
+        <blockquote class="new-blockquote hidden-sm">
           <p>SonicWall had the malware protection we needed, and it was economical.
           </p>
           <footer>Rob Rasmussen,
